# Mirion

./: .claudeignore  .gitignore  CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.claude/: settings.local.json
.github/workflows/: android-build.yml  android-deploy.yml  ci.yml  contract-pipeline.yml  ios-build.yml  testflight.yml
apps/contracts/: .gitignore  foundry.toml  package.json  remapping.txt
apps/contracts/script/: DeployTimeLock.s.sol
apps/contracts/src/: TimeLock.sol  Timelock.sol
apps/mobile/: .gitignore  App.tsx  CLAUDE.md  Gemfile  LockFi.modulemap  LockFi.podspec  app.config.ts  app.json  babel.config.js  eslint.config.mjs  index.js  jest.config.js  jest.setup.ts  metro.config.js  nitro.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/mobile/android/app/src/main/: AndroidManifest.xml  CMakeLists.txt
apps/mobile/android/app/src/main/java/com/lockfi/: MainActivity.kt  MainApplication.kt
apps/mobile/android/app/src/main/java/com/mirion/: MainActivity.kt  MainApplication.kt
apps/mobile/android/app/src/main/res/drawable/: splash_background.xml
apps/mobile/android/app/src/main/res/values/: strings.xml  styles.xml
apps/mobile/app/: _layout.tsx  (+1 more)
apps/mobile_renew/: app.json  babel.config.js  eslint.config.mjs  index.js  package-lock.json  package.json  tsconfig.json
apps/web/: deploy.sh  ecosystem.config.cjs  instrumentation.ts  jest.config.ts  market_design.html  package.json
apps/whale-monitor/: package.json
apps/worker/: package.json  wrangler.toml
(+656 files in other folders)
